Prevent cut off of last row (fix #2622)

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -1939,7 +1939,7 @@ h3.author .transfer-ownership {
 
 // Theme detail page
 #persona #more-personas .article {
-  padding: 0 10px 10px;
+  padding: 0 10px 20px;
 
   .persona.hovercard:nth-child(odd) {
     clear: left;
